--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
- <title>Blair's JSAPI 4.18 Map</title>
-  
-<link rel='stylesheet' href='style.css'/>
-    <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css"/>
-    <script src="https://js.arcgis.com/4.18/"></script>
 
-  <body>
-    <div id="viewDiv"></div>
-    <script src='script.js'></script>
-  </body>
+    <title>Popups - 4.18</title>
+
+<link rel='stylesheet' href='style.css'/>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/css/main.css">
+  <script src="https://js.arcgis.com/4.18/"></script>
+
+<body>
+ <div id="viewDiv"></div>
+ <script src='script.js'></script>
+</body>
